# Kruskal-C-

Kruskal/Use/: CMakeLists.txt  main.cpp
